# Banking-System

./: CMakeLists.txt  README.md
database/: schema.sql
include/: Account.hpp  Client.hpp  Database.hpp  Loan.hpp  Notification.hpp  Server.hpp  User.hpp
resources/: config.json  email_template.html  style.css
src/: Account.cpp  Client.cpp  Database.cpp  Loan.cpp  Notification.cpp  Server.cpp  User.cpp  main.cpp
test/: test_user.cpp
